--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,7 +19,7 @@
      <rect>
       <x>60</x>
       <y>60</y>
-      <width>251</width>
+      <width>461</width>
       <height>61</height>
      </rect>
     </property>
@@ -37,7 +37,7 @@
      <rect>
       <x>60</x>
       <y>150</y>
-      <width>71</width>
+      <width>91</width>
       <height>16</height>
      </rect>
     </property>
@@ -50,7 +50,7 @@
      <rect>
       <x>60</x>
       <y>190</y>
-      <width>58</width>
+      <width>91</width>
       <height>16</height>
      </rect>
     </property>
@@ -125,12 +125,38 @@
      <rect>
       <x>60</x>
       <y>420</y>
-      <width>58</width>
+      <width>111</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>Balance</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="IDLabel">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>380</y>
+      <width>191</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="balanceLabel">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>420</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
